--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,20 @@ dependencies {
 
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:31.0.1-jre'
+
+    // cognito
+    implementation group: 'software.amazon.awssdk', name: 'cognitoidentity', version: '2.25.56'
+    implementation group: 'software.amazon.awssdk', name: 'cognitoidentityprovider', version: '2.25.56'
+
+    // slf4j
+    implementation group: 'org.slf4j', name: 'slf4j-api', version: '2.0.13'
+//    implementation group: 'org.slf4j', name: 'slf4j-simple', version: '2.0.13'
+//    implementation group: 'org.slf4j', name: 'log4j-over-slf4j', version: '2.0.13'
+    implementation 'org.slf4j:slf4j-log4j12:2.0.13'
+
+    // lombok
+    compileOnly 'org.projectlombok:lombok:1.18.32'
+    annotationProcessor 'org.projectlombok:lombok:1.18.32'
 }
 
 application {
