--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,9 @@ dependencies {
     // lombok
     compileOnly 'org.projectlombok:lombok:1.18.32'
     annotationProcessor 'org.projectlombok:lombok:1.18.32'
+
+    // MQTT
+    implementation 'software.amazon.awssdk.iotdevicesdk:aws-iot-device-sdk:1.20.7'
 }
 
 application {
